[package]
name = "tower_defence"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2" }
bevy-inspector-egui = "0.24.0"
bevy_xpbd_2d = "0.4.2"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
